Fix header alignment css

--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -74,29 +74,24 @@ code {
 }
 
 /* Adds GitHub style links to headers on mouseover */
-h2 {
-    margin-left: -18px;
-    padding-left: 8px;
+.post-content h2 {
+    text-indent: -10px;
 }
 
-h3 {
-    margin-left: -16px;
-    padding-left: 6px;
+.post-content h3 {
+    text-indent: -8px;
 }
 
-h4 {
-    margin-left: -14px;
-    padding-left: 4px;
+.post-content h4 {
+    text-indent: -6px;
 }
 
-h5 {
-    margin-left: -12px;
-    padding-left: 2px;
+.post-content h5 {
+    text-indent: -4px;
 }
 
-h6 {
-    margin-left: -10px;
-    padding-left: 0px;
+.post-content h6 {
+    text-indent: -2px;
 }
 
 h1 .octicon, h2 .octicon, h3 .octicon, h4 .octicon, h5 .octicon, h6 .octicon {
